fixed scrollbar position

--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,7 @@
   margin: 0px auto;
 
   background-color: rgb(249, 249, 248);
+
   border: 1px solid rgb(253,253,253);
   box-sizing: border-box;
-
-  overflow: auto;
 }
