--- a/src/components/mainContentArea.css
+++ b/src/components/mainContentArea.css
@@ -2,10 +2,12 @@
 margin: 0px 0px 0px 220px;
 padding: 20px; 
 float:left;
+background-color: rgb(249, 249, 248);
+overflow: auto;
 
 color: rgb(140,140,140);
 }
 
 .mainContentArea h1{
-        margin-top: 0px;
+margin-top: 0px;
 }
