--- a/src/components/workItem.css
+++ b/src/components/workItem.css
@@ -16,6 +16,11 @@
     position: relative;
 }
 
+.workItem:hover{
+    cursor: pointer; 
+    cursor: hand; 
+}
+
 .workItemImage{
     margin: 40px 0px 0px 0px;
     max-height: 65px;
